# AnimeBoot

./: README.md  README.zh-CN.md
AnimeBootPkg/: AnimeBootPkg.dec  AnimeBootPkg.dsc
AnimeBootPkg/Application/AnimeBoot/: AnimeBoot.c  AnimeBoot.inf
AnimeBootPkg/Include/: AnimFormat.h  AnimeBoot.h  DisplayMath.h  GopBlitter.h
docs/: anim_format.txt  secure_boot.txt  signing_guide.md  signing_guide.zh-CN.md  testing_plan.txt  windows_integration.txt
host-tools/abtool/: USAGE.txt  pyproject.toml
host-tools/abtool/abtool/: __init__.py  anim_package.py  cli.py  frames.py  manifest.py  preview.py  utils.py
scripts/: Install-AnimeBoot.ps1  Remove-AnimeBoot.ps1  Sign-AnimeBoot.ps1
